@@ -6,11 +6,13 @@
 # Source file position: <groff-source>/src/roff/grog/grog.pl
 # Installed position: <prefix>/bin/grog
 
-# Copyright (C) 1993-2014  Free Software Foundation, Inc.
+# Copyright (C) 1993-2015  Free Software Foundation, Inc.
 # Written by James Clark, maintained by Werner Lemberg.
 # Rewritten with Perl by Bernd Warken <groff-bernd.warken-72@web.de>.
 # The macros for identifying the devices were taken from Ralph
-# Corderoy's `grog.sh' from 2006.
+# Corderoy's `grog.sh' of 2006.
+
+# Last update: 19 Jul 2015
 
 # This file is part of `grog', which is part of `groff'.
 
